Fix overflowing table header issue

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -665,8 +665,4 @@ div.dataTableScroller {
   table.actionsDataTable td.label {
     position: static;
   }
-
-  table tbody {
-    display: block;
-  }
 }
